--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
         <div id="cookie" class="cookie"><img src="download.jpeg" alt="cookie image"></div>
         <p id="cookieCount">0 Cookies</p>
         <button id="changeNameBtn">Change Bakery Name</button>
+
+        
+    <button id="seeAllBakeriesBtn">See All Bakeries</button>
+    <div id="allBakeries" class="hidden">
+        <h2>All Bakeries</h2>
+        <ul id="bakeryList"></ul>
+    </div>
+ 
     </div>
     <script src="script.js"></script>
 </body>
