--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h2>All Bakeries</h2>
         <ul id="bakeryList"></ul>
     </div>
- 
+    <button id="resetBtn">Reset All Records</button>
     </div>
     <script src="script.js"></script>
 </body>
