--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Signup</h1>
+        <h1>LOGIN</h1>
         <form id="signupForm">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
