--- a/main.html
+++ b/main.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="mstyles.css">
+    <link rel="icon" href="logo.jpg">
     <title>Signup Page</title>
 </head>
 <body>
+    <header>Shaun Baker's</header>
+    
     <div class="container">
         <h1>LOGIN</h1>
         <form id="signupForm">
